syntax = "proto3";

package publisher;

option go_package = "thor_streamer/proto";

message StreamResponse {
  bytes data = 1;
}

message Empty {}

service EventPublisher {
  rpc SubscribeToTransactions(Empty) returns (stream StreamResponse) {}
  rpc SubscribeToAccountUpdates(Empty) returns (stream StreamResponse) {}
  rpc SubscribeToSlotStatus(Empty) returns (stream StreamResponse) {}
  rpc SubscribeToWalletTransactions(SubscribeWalletRequest) returns (stream StreamResponse) {}
}

message SubscribeWalletRequest {
  repeated string wallet_address = 1; // Array of Base58 encoded wallet addresses, max 10
}
